welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: ')' expected but ';' found.
  backward(getWorldHeight();
                           ^Array2:20: error: ';' expected but 'return' found.
  return colors;
  ^