welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var colors = new Array[Color](getWorldHeight());
  
  colors = read();
}


def read():Array[Color] = {
  var colors = new Array[Color](getWorldHeight());
  
  for (i <- 0 to getWorldHeight() - 2) {
    colors(i) = getGroundColor();
    forward()
  }
  
  colors(getWorldHeight() - 1) = getGroundColor();
  backward(getWorldHeight();
  
  println(colors )
  return colors;
}



